--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,34 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Dillon O'Leary
+email: notsetup@dillonoleary.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal webpage for a friendly engineer. Looking for ways to
+  bring sustainable societal good as a technologist for both my Seattle community
+  and for the global community.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "dillonoleary.com" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  dillonoleary
 
 # Build settings
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "neon"
 plugins:
   - jekyll-feed
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
