--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   and for the global community.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "dillonoleary.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  dillonoleary
+github_username: dillonoleary
 
 # Build settings
 theme: minimal-mistakes-jekyll
 minimal_mistakes_skin: "neon"
 plugins:
   - jekyll-feed
+
+include: ["_pages"]
 
 defaults:
   # _posts
@@ -53,7 +55,6 @@ defaults:
     values:
       layout: single
       author_profile: true
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
