--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,17 @@ markup:
       unsafe: true
 
 # Menus:
-  # main:
+#   main:
+    # - identifier: blog
+    #   name: Blog
+    #   title: Blog posts
+    #   url: /blogs
+    #   weight: 1
+    # - identifier: gallery
+    #   name: Gallery
+    #   title: Blog posts
+    #   url: /gallery
+    #   weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -46,7 +56,7 @@ params:
   title: "Dillon's Homepage"
   description: Profile highlighting Dillon's work
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/fav.png"
+  # favicon: "/do-4.png"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -119,8 +129,8 @@ params:
     enable: true
     intro: "Hi, my name is"
     title: "Dillon."
-    subtitle: "I build software and lead teams"
-    content: "A friendly programmer dedicated to social good. I strongly believe that software engineering is foremost an exercise in human relations and strong communities build good software."
+    subtitle: "I build software and communities."
+    content: "A friendly engineer developing software in the civic and climate space. I believe software engineering is about people first—strong communities results in better software."
     image: /images/hero.svg
     bottomImage:
       enable: true
