--- a/config.yml
+++ b/config.yml
@@ -128,19 +128,19 @@ params:
   hero:
     enable: true
     intro: "Hi, my name is"
-    title: "Dillon."
+    title: "This site is under construction!."
     subtitle: "I build software and communities."
     content: "A friendly engineer developing software in the civic and climate space. I believe software engineering is about people first—strong communities results in better software."
-    image: /images/hero.svg
+    image: /images/me.jpeg
     bottomImage:
       enable: true
     # roundImage: true # Make hero image circular | default false
-    button:
-      enable: true
-      name: "Resume"
-      url: "#"
-      download: true
-      newPage: false
+    # button:
+    #   enable: true
+    #   name: "Resume"
+    #   url: "#"
+    #   download: true
+    #   newPage: false
     socialLinks:
       fontAwesomeIcons:
         - icon: fab fa-github
@@ -152,21 +152,20 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.jpeg"
+    image: "/images/me-casual.jpeg"
     content: |-
-      I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA.
+      I am a software engineer based out of Seattle. Formerly I worked at Amazon in sustainability, I now work independently in the civic and climate space. My skillset is primarily in backend engineering and community building, check out the project section below for more information on my current work. Outside of my software work I'm in training to bartend and love running on trails in Seattle.
 
-      I am currently working on a project that will be used to help people find the best way to get around the city.
     skills:
       enable: true
-      title: "Here are a few technologies I've been working with recently:"
+      title: "Here are a few technologies I've work with:"
       items:
-        - "HTML"
-        - "CSS"
-        - "JavaScript"
-        - "React"
-        - "Node"
-        - "Express"
+        - "Python"
+        - "AWS"
+        - "Supabase (Postgres)"
+        - "FastAPI"
+        - "TypeScript"
+        - "Next.js"
 
   # Experience
   experience:
