--- a/config.yml
+++ b/config.yml
@@ -172,65 +172,42 @@ params:
     enable: true
     # title: "Custom Name"
     items:
-      - job: "Senior Software Developer"
-        company: "Facebook"
-        companyUrl: "https://example.com"
-        date: "Jan 2022 - present"
-        featuredLink:
-          enable: true
-          name: "View the project"
-          url: "https://example.com"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
-
-      - job: "Software Developer"
-        company: "Amazon"
-        companyUrl: "https://example.com"
-        date: "Sep 2020 - Dec 2021"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
-        info:
-          enable: true
-          content: I worked as a software developer for more than one year in Amazon.
-        content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Junior Software Developer"
-        company: "Apple"
-        companyUrl: "https://example.com"
-        date: "Jan 2020 - Aug 2020"
+      - job: "Technical Lead"
+        company: "Digital Aid Seattle"
+        companyUrl: "https://www.digitalaidseattle.org"
+        date: "December 2023 - Present"
         info:
           enable: false
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://github.com/digitalaidseattle/seattle-humane-app"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
+          I'm currently volunteering as a tech lead for Digital Aid Seattle, leading the organization's pioneering venture with Seattle Humane. We are working to improve the systems they use to track incoming animals. In my work I:
+          - Drive project direction of the full-stack application using Next.js, Vercel, and Supabase.
+          - Lead meetings and coordinate a team of volunteer engineers.
 
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "UI/UX Designer"
-        company: "Netflix"
-        companyUrl: "https://example.com"
-        date: "June 2017 - Nov 2019"
+      - job: "Software Engineer Consultant"
+        company: "ISD 197"
+        companyUrl: "https://www.isd197.org"
+        date: "October 2024 - Present"
+        info:
+          enable: false
         featuredLink:
           enable: true
-          url: "https://example.com"
+          url: "https://github.com/DillonOLeary/immunization-records-pipeline"
         content: |
-          I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city.
-
-          - Lead backend developer for a product.
-          - Created a frontend design for a product.
-
-      - job: "Product Designer"
-        company: "Google"
-        companyUrl: "https://example.com"
-        date: "Feb 2016 - Mar 2017"
-        content: "I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. I am currently working on a project that will be used to help people find the best way to get around the city."
+          Content
+      
+      - job: "Software Development Engineer"
+        company: "Amazon"
+        companyUrl: "https://amazon.com"
+        date: "April 2021 - March 2023"
+        info:
+          enable: false
+        content: |
+          I worked on two teams at Amazon. I started on the ordering team, but soon I switched to sustainabilty. That was the start of my career shift towards work in climate tech. While I was at Amazon, I did the following:
+          - Led a documentation restructuring initiative to improve usability of Amazon's complex platform, reducing on-call burden for platform engineers.
+          - Designed and developed a Python-based tool for auditing AWS functions that calculate global carbon emissions, supporting Amazon's sustainability report.
 
   # Education
   education:
@@ -238,46 +215,19 @@ params:
     # title: "Custom Name"
     index: false
     items:
-      - title: "Master of Business Administration"
+      - title: "Bachelor of Arts"
         school:
-          name: "University of California, Berkeley"
-          url: "https://example.org"
-        date: "2013 - 2015"
-        GPA: "3.8 out of 5.0"
+          name: "University of Wisconsin-Madison"
+          url: "https://wisc.edu"
+        date: "2016 - 2020"
+        GPA: "3.8 out of 4.0"
         content: |-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-      - title: "Bachelor of Science in Computer Science"
-        school:
-          name: "Massachusetts Institute of Technology"
-          url: "https://example.org"
-        date: "2009 - 2013"
-        GPA: "3.9 out of 5.0"
-        content: |-
-          I Publiced two papers in the ACM SIGCHI Conference on Artificial Intelligence.
-          - [Fast and Accurate Object Detection with a Single Convolutional Neural Network](https://example.com)
-          - Face mask detection using a single convolutional neural network.
-
-          Extracurricular Activities
-            - Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            - Tempora esse, eaque delectus nulla quo doloribus itaque expedita alias natus optio totam maxime nihil excepturi velit a animi laborum hic similique.
-        featuredLink:
-          enable: true
-          name: "My academic record"
-          url: "https://example.com"
-      - title: "High School"
-        school:
-          name: "Thomas Jefferson High School for Science and Technology."
-          url: "https://example.org"
-        GPA: "4.2 out of 5.0"
-        featuredLink:
-          enable: true
-          url: "https://example.com"
+          - Double Major: Computer Sciences and Psychology
+          - Awards: Graduated with Distinction, Distinction in the Major for both majors
 
   # Achievements
   achievements:
-    enable: true
+    enable: false
     # title: "Custom Name"
     items:
       - title: Google kickstart runner
