--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/terminalcv"]
 	path = themes/terminalcv
 	url = https://github.com/coolapso/hugo-theme-terminalcv.git
+[submodule "themes/hugo-profile"]
+	path = themes/hugo-profile
+	url = https://github.com/gurusabarish/hugo-profile.git
